feat:  run tests product media